
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ fsaFdUsb ;
 scalar_t__ initialized ;
 scalar_t__ usbFd ;

__attribute__((used)) static bool IOSUHAX_usb_isInserted(void)
{
    return initialized && (fsaFdUsb >= 0) && (usbFd >= 0);
}
